--- a/verilog/Makefile
+++ b/verilog/Makefile
@@ -26,10 +26,10 @@ $(TARGET): $(CLK_TEST_SRC)
 	$(IVERILOG) -o $@ $^
 
 clk_test: $(TARGET)
-	$(VVP) $(TARGET) +TESTCASE=CLOCK_TEST -vcd
+	$(VVP) $(TARGET) +TESTCASE=CLOCK_TEST +DUMP_VCD=1
 
 sim: $(TARGET)
-	$(VVP) $(TARGET) +TESTCASE=FULL_TEST -vcd
+	$(VVP) $(TARGET) +TESTCASE=FULL_TEST +DUMP_VCD=1
 	
 debug_sim: $(TARGET)
 	$(VVP) $(TARGET) +TESTCASE=DEBUG_TEST -vcd
